[package]
name = "hyprwin"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = "0.1.0"
abi_stable = "0.11.1"
hyprland = "0.4.0-alpha.2"
serde = { version = "1.0.188", features = ["derive"] }
fuzzy-matcher = "0.3.7"
error-stack = "0.5.0"
thiserror = "2.0.11"
ron = "0.8.1"
tracing = "0.1.41"
