[package]
name = "hyprwin"
version = "0.4.0"
edition = "2021"
license = "GPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyrun-plugin = { git = "https://github.com/anyrun-org/anyrun" }
abi_stable = "0.11.1"
hyprland = "0.4.0-beta.3"
serde = { version = "1", features = ["derive"] }
fuzzy-matcher = "0.3"
error-stack = "0.6.0"
thiserror = "2.0.11"
ron = "0.11.0"
tracing = "0.1.41"
